--- a/.github/workflows/youth_gain2.yml
+++ b/.github/workflows/youth_gain2.yml
@@ -1,4 +1,4 @@
-name: youth_gain(中青浏览赚)
+name: youth_gain2(中青浏览赚)
 
 on:
   workflow_dispatch:
@@ -11,16 +11,16 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     env:
-      YOUTH_START1: ${{ secrets.YOUTH_START1 }}
-      YOUTH_LOOK1: ${{ secrets.YOUTH_LOOK1 }}
-      YOUTH_START2: ${{ secrets.YOUTH_START2 }}
-      YOUTH_LOOK2: ${{ secrets.YOUTH_LOOK2 }}
-      YOUTH_START3: ${{ secrets.YOUTH_START3 }}
-      YOUTH_LOOK3: ${{ secrets.YOUTH_LOOK3 }}
-      YOUTH_START4: ${{ secrets.YOUTH_START4 }}
-      YOUTH_LOOK4: ${{ secrets.YOUTH_LOOK4 }}
-      YOUTH_START5: ${{ secrets.YOUTH_START5 }}
-      YOUTH_LOOK5: ${{ secrets.YOUTH_LOOK5 }}
+      YOUTH_START21: ${{ secrets.YOUTH_START21 }}
+      YOUTH_LOOK21: ${{ secrets.YOUTH_LOOK21 }}
+      YOUTH_START22: ${{ secrets.YOUTH_START22 }}
+      YOUTH_LOOK22: ${{ secrets.YOUTH_LOOK22 }}
+      YOUTH_START23: ${{ secrets.YOUTH_START23 }}
+      YOUTH_LOOK23: ${{ secrets.YOUTH_LOOK23 }}
+      YOUTH_START24: ${{ secrets.YOUTH_START24 }}
+      YOUTH_LOOK24: ${{ secrets.YOUTH_LOOK24 }}
+      YOUTH_START25: ${{ secrets.YOUTH_START25 }}
+      YOUTH_LOOK25: ${{ secrets.YOUTH_LOOK25 }}
     steps:
       - uses: actions/checkout@v1
       - name: Use Node.js 12.x
@@ -32,39 +32,39 @@ jobs:
           npm install
           
       - name: '运行 【账号一中青浏览赚】'
-        if: env.YOUTH_START1
+        if: env.YOUTH_START21
         run: |
           node youth_gain.js
         env:
-          YOUTH_START: ${{ secrets.YOUTH_START1 }}
-          YOUTH_LOOK: ${{ secrets.YOUTH_LOOK1 }}
+          YOUTH_START: ${{ secrets.YOUTH_START21 }}
+          YOUTH_LOOK: ${{ secrets.YOUTH_LOOK21 }}
        
       - name: '运行 【账号二中青浏览赚】'
-        if: env.YOUTH_START2
+        if: env.YOUTH_START22
         run: |
           node youth_gain.js
         env:
-          YOUTH_START: ${{ secrets.YOUTH_START2 }}
-          YOUTH_LOOK: ${{ secrets.YOUTH_LOOK2 }}
+          YOUTH_START: ${{ secrets.YOUTH_START22 }}
+          YOUTH_LOOK: ${{ secrets.YOUTH_LOOK22 }}
       - name: '运行 【账号三中青浏览赚】'
-        if: env.YOUTH_START3
+        if: env.YOUTH_START23
         run: |
           node youth_gain.js
         env:
-          YOUTH_START: ${{ secrets.YOUTH_START3 }}
-          YOUTH_LOOK: ${{ secrets.YOUTH_LOOK3 }}
+          YOUTH_START: ${{ secrets.YOUTH_START23 }}
+          YOUTH_LOOK: ${{ secrets.YOUTH_LOOK23 }}
       - name: '运行 【账号四中青浏览赚】'
-        if: env.YOUTH_START4
+        if: env.YOUTH_START24
         run: |
           node youth_gain.js
         env:
-          YOUTH_START: ${{ secrets.YOUTH_START4 }}
-          YOUTH_LOOK: ${{ secrets.YOUTH_LOOK4 }}
+          YOUTH_START: ${{ secrets.YOUTH_START24 }}
+          YOUTH_LOOK: ${{ secrets.YOUTH_LOOK24 }}
       - name: '运行 【账号五中青浏览赚】'
-        if: env.YOUTH_START5
+        if: env.YOUTH_START25
         run: |
           node youth_gain.js
         env:
-          YOUTH_START: ${{ secrets.YOUTH_START5 }}
-          YOUTH_LOOK: ${{ secrets.YOUTH_LOOK5 }}
+          YOUTH_START: ${{ secrets.YOUTH_START25 }}
+          YOUTH_LOOK: ${{ secrets.YOUTH_LOOK25 }}
 
